# sermon-extractor

./: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py  sermon_automation_plan_final.md  vercel.json
app/: database.py  main.py  models.py
app/routers/: articles.py  channels.py  videos.py
app/services/: gemini_summarizer.py  openai_writer.py  risk_reviewer.py  scorer.py  seo_scorer.py  static_publisher.py  transcript_extractor.py  youtube_collector.py
data/: articles-index.json  channels_seed.json
docs/: fallback-structure-diagram.md
frontend/: index.html
